--- a/Tensorflowjs/Lab_assigment2/index.html
+++ b/Tensorflowjs/Lab_assigment2/index.html
@@ -1,23 +1,55 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+    <meta charset="UTF-8">
     <title>Lab Assignment 2 - Vector Operations</title>
+
+    <!-- TensorFlow.js CDN -->
     <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@4.16.0/dist/tf.min.js"></script>
 </head>
 <body>
-    <script>
-        console.log("Lab Assignment 2: Element-wise Operations");
 
-        const vectorA = tf.tensor1d([2, 4, 6]);
-        const vectorB = tf.tensor1d([1, 3, 5]);
+<h2>Lab Assignment 2: Vector Element-wise Operations</h2>
+<p>Open the browser console to see output</p>
 
-        // Element-wise Addition
-        const addition = tf.add(vectorA, vectorB);
-        addition.print();
+<script>
+    console.log("Lab Assignment 2: Vector Element-wise Operations");
 
-        // Element-wise Multiplication
-        const multiplication = tf.mul(vectorA, vectorB);
-        multiplication.print();
-    </script>
+    // Create vectors
+    const vectorA = tf.tensor1d([2, 4, 6]);
+    const vectorB = tf.tensor1d([1, 3, 5]);
+
+    // Display original vectors
+    console.log("Vector A:");
+    vectorA.print();
+
+    console.log("Vector B:");
+    vectorB.print();
+
+    // Element-wise Addition
+    const addition = tf.add(vectorA, vectorB);
+    console.log("Addition (A + B):");
+    addition.print();
+
+    // Element-wise Subtraction
+    const subtraction = tf.sub(vectorA, vectorB);
+    console.log("Subtraction (A - B):");
+    subtraction.print();
+
+    // Element-wise Multiplication
+    const multiplication = tf.mul(vectorA, vectorB);
+    console.log("Multiplication (A * B):");
+    multiplication.print();
+
+    // Free memory
+    vectorA.dispose();
+    vectorB.dispose();
+    addition.dispose();
+    subtraction.dispose();
+    multiplication.dispose();
+
+    console.log("Vector operations completed successfully.");
+</script>
+
 </body>
 </html>
